adding color theme scss

--- a/_sass/_solo.scss
+++ b/_sass/_solo.scss
@@ -3,7 +3,7 @@
 // ----------------------------------------------------------------------------
 @import "solo/variables";
 @import "solo/normalize";
-@import "solo/themes/dallas";
+@import "solo/themes/soft";
 @import "solo/base";
 @import "solo/tables";
 @import "solo/images";
