--- a/_sass/solo/themes/_green.scss
+++ b/_sass/solo/themes/_green.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // green theme
 // ----------------------------------------------------------------------------
-$base-color: #009624 !default;
+$base-color: #0c6319 !default;
 
 $background-color: $base-color;
 $background-color-darker: #1b5e20 !default;
