--- a/_sass/solo/themes/_purple.scss
+++ b/_sass/solo/themes/_purple.scss
@@ -1,15 +1,15 @@
 // ----------------------------------------------------------------------------
 // purple theme
 // ----------------------------------------------------------------------------
-$base-color: #4a148c !default;
+$base-color: #190841 !default;
 
 $background-color: $base-color;
-$background-color-darker: #12005e !default;
+$background-color-darker: #180440 !default;
 
-$accent-color: #ea80fc !default;
+$accent-color: #0de5ff !default;
 
-$code-background-color: #210670 !default;
+$code-background-color: #260769 !default;
 
-$text-color-alt: #e1bee7 !default;
-$text-color: #f3e5f5 !default;
-$header-text-color: #ea80fc !default;
+$text-color-alt: #613ca7 !default;
+$text-color: #947acd !default;
+$header-text-color: #8457ff !default;
