--- a/_sass/solo/themes/_red.scss
+++ b/_sass/solo/themes/_red.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // red theme
 // ----------------------------------------------------------------------------
-$base-color: #b71c1c !default;
+$base-color: #6d1212 !default;
 
 $background-color: $base-color;
 $background-color-darker: #5c0505 !default;
@@ -12,4 +12,4 @@ $code-background-color: #380101 !default;
 
 $text-color-alt: #ff80ab !default;
 $text-color: #ffcdd2 !default;
-$header-text-color: #ff80ab !default;
+$header-text-color: #ff80a0 !default;
