--- a/_sass/solo/themes/_blue.scss
+++ b/_sass/solo/themes/_blue.scss
@@ -1,15 +1,15 @@
 // ----------------------------------------------------------------------------
 // blue theme
 // ----------------------------------------------------------------------------
-$base-color: #0d47a1 !default;
+$base-color: #00135f !default;
 
 $background-color: $base-color;
 $background-color-darker: #002171 !default;
 
-$accent-color: #42a5f5 !default;
+$accent-color: #00e5ff !default;
 
-$code-background-color: #002171 !default;
+$code-background-color: #001740 !default;
 
 $text-color-alt: #bbdefb !default;
 $text-color: #eeffff !default;
-$header-text-color: #00e5ff !default;
+$header-text-color: #42a5f5 !default;
