--- a/_sass/solo/_images.scss
+++ b/_sass/solo/_images.scss
@@ -7,3 +7,89 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.ig-image {
+  border-radius: 0.5em;
+  padding: .2em;
+}
+
+.ig-link {
+  &:is(:hover) {
+    opacity: 0.3;
+    filter: grayscale(100%);
+  }
+}
+
+.ig-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.ig-column {
+  flex: 25%;
+  max-width: 25%;
+}
+
+.ig-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: $background-color-darker;
+}
+
+.ig-modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+#ig-modal-caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: $text-color;
+  padding: 10px 0;
+  height: 150px;
+}
+
+.ig-modal-content, #ig-modal-caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+.ig-modal-close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: $accent-color;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.ig-modal-close:hover,
+.ig-modal-close:focus {
+  color: $text-color;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+  .ig-modal-content {
+    width: 100%;
+  }
+}
