Sampler build and package targets

--- a/_sass/solo/themes/_monokai.scss
+++ b/_sass/solo/themes/_monokai.scss
@@ -1,15 +1,15 @@
 // ----------------------------------------------------------------------------
 // monokai theme
 // ----------------------------------------------------------------------------
-$base-color: #2e2a2e !default;
+$base-color: #2d292d !default;
 
 $background-color: $base-color;
 $background-color-darker: #151315 !default;
 
-$accent-color: #a1d16f !default;
+$accent-color: #a9dd76 !default;
 
 $code-background-color: #151315 !default;
 
-$text-color-alt: #f2ce61 !default;
-$text-color: #73d1dc !default;
-$header-text-color: #f25d81 !default;
+$text-color-alt: #ffd966 !default;
+$text-color: #79dce8 !default;
+$header-text-color: #ff6288 !default;
