--- a/_includes/sampler.html
+++ b/_includes/sampler.html
@@ -3,52 +3,52 @@
 <p>The Solo single page sampler platter, each color palette is bundled in `_sass/solo/themes`. Feel free to add your own.</p>
 <ul>
     <li>
-        <a href="/">default</a>:&nbsp;<em>The default style configured in _config.yml.</em>
+        <a href="{{ site.baseurl }}/">default</a>:&nbsp;<em>The default style configured in _config.yml.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/arcade">arcade</a>:&nbsp;<em>80s video game arcade ambiance.</em>
+        <a href="{{ site.baseurl }}/arcade">arcade</a>:&nbsp;<em>80s video game arcade ambiance.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/blue">blue</a>:&nbsp;<em>Just blue.</em>
+        <a href="{{ site.baseurl }}/blue">blue</a>:&nbsp;<em>Just blue.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/corbs">corbs</a>:&nbsp;<em>My personal styleo (set as default).</em>
+        <a href="{{ site.baseurl }}/corbs">corbs</a>:&nbsp;<em>My personal styleo (set as default).</em>
     </li>
     <li>
-        <a href="{{ site.url }}/dark">dark</a>:&nbsp;<em>Token dark styleo.</em>
+        <a href="{{ site.baseurl }}/dark">dark</a>:&nbsp;<em>Token dark styleo.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/dracula">dracula</a>:&nbsp;<em>Token dark styleo.</em>
+        <a href="{{ site.baseurl }}/dracula">dracula</a>:&nbsp;<em>Token dark styleo.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/eightyfour">eightyfour</a>:&nbsp;<em>80s centric colors.</em>
+        <a href="{{ site.baseurl }}/eightyfour">eightyfour</a>:&nbsp;<em>80s centric colors.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/githubdark">githubdark</a>:&nbsp;<em>Github dark colors.</em>
+        <a href="{{ site.baseurl }}/githubdark">githubdark</a>:&nbsp;<em>Github dark colors.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/green">green</a>:&nbsp;<em>Just green.</em>
+        <a href="{{ site.baseurl }}/green">green</a>:&nbsp;<em>Just green.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/light">light</a>:&nbsp;<em>Token light styleo.</em>
+        <a href="{{ site.baseurl }}/light">light</a>:&nbsp;<em>Token light styleo.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/monokai">monokai</a>:&nbsp;<em>Classic Sublime Text colors.</em>
+        <a href="{{ site.baseurl }}/monokai">monokai</a>:&nbsp;<em>Classic Sublime Text colors.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/nightowl">nightowl</a>:&nbsp;<em>Colors for the night owls out there.</em>
+        <a href="{{ site.baseurl }}/nightowl">nightowl</a>:&nbsp;<em>Colors for the night owls out there.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/purple">purple</a>:&nbsp;<em>Skeletor would be happy with this styleo.</em>
+        <a href="{{ site.baseurl }}/purple">purple</a>:&nbsp;<em>Skeletor would be happy with this styleo.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/red">red</a>:&nbsp;<em>Just red.</em>
+        <a href="{{ site.baseurl }}/red">red</a>:&nbsp;<em>Just red.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/soft">soft</a>:&nbsp;<em>Soft like cotton theme.</em>
+        <a href="{{ site.baseurl }}/soft">soft</a>:&nbsp;<em>Soft like cotton theme.</em>
     </li>
     <li>
-        <a href="{{ site.url }}/solarized">solarized</a>:&nbsp;<em>Classic solarized dark colors.</em>
+        <a href="{{ site.baseurl }}/solarized">solarized</a>:&nbsp;<em>Classic solarized dark colors.</em>
     </li>
 </ul>
 {% endif %}
