--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
   <div class="container">
     {% include header.html %}
     {{ content }}
+    {% include footer.html %}
   </div>
 {% include scripts.html %}
 </body>
