--- a/css/main.scss
+++ b/css/main.scss
@@ -24,3 +24,15 @@
   text-align: right;
   text-decoration: none;
 }
+
+.video {
+  text-align: center;
+  width:100%;
+
+  iframe {
+    width: 300px;
+    height: 533px;
+    border: none;
+    border-radius: 0.5em;
+  }
+}
