--- a/_sass/solo/themes/_purple.scss
+++ b/_sass/solo/themes/_purple.scss
@@ -8,8 +8,8 @@ $background-color-darker: #180440 !default;
 
 $accent-color: #0de5ff !default;
 
-$code-background-color: #260769 !default;
+$code-background-color: #0f052b !default;
 
-$text-color-alt: #613ca7 !default;
-$text-color: #947acd !default;
-$header-text-color: #8457ff !default;
+$text-color-alt: #9868ee !default;
+$text-color: #ded5f7 !default;
+$header-text-color: #9869f8 !default;
