--- a/_sass/solo/_images.scss
+++ b/_sass/solo/_images.scss
@@ -23,11 +23,17 @@ img {
 .ig-row {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .ig-column {
   flex: 25%;
   max-width: 25%;
+}
+
+.ig-resize {
+  flex: 100%;
+  max-width: 100%;
 }
 
 .ig-modal {
@@ -92,4 +98,26 @@ img {
   .ig-modal-content {
     width: 100%;
   }
+}
+
+figure {
+  img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 0.5em;
+    width: 128px;
+  }
+
+  figcaption {
+    text-align: center;
+  }
+}
+
+
+.image-magic {
+  border: 1px solid black;
+  background-color: red;
+  width: 100%;
+  transition: 1s;
 }
