tidy up Thumbnail Images, Figure Images and Image Flexbox

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
-<div id="ig-modal" class="ig-modal">
-    <span class="ig-modal-close">&times;</span>
-    <img class="ig-modal-content" id="ig-modal-content">
-    <div id="ig-modal-caption"></div>
+<div id="image-modal" class="image-modal">
+    <span class="image-modal-close">&times;</span>
+    <img class="image-modal-content" id="image-modal-content">
+    <div id="image-modal-caption"></div>
 </div>
