--- a/_includes/image/flexbox.html
+++ b/_includes/image/flexbox.html
@@ -1,13 +1,13 @@
 {% assign numImages = site.data.images.size %}
 {% assign imagesPerColumn = numImages | divided_by: 4 | minus: 1 %}
 {% assign imagesRemainder = numImages | modulo: 4 %}
-<div class="ig-row">
+<div class="image-row">
     {% for i in (0..3) %}
-    <div class="ig-column">
+    <div class="image-column">
         {% for j in (0..imagesPerColumn) %}
         {% assign offset = i | times: imagesPerColumn %}
         {% assign idx = i | plus: j | plus: offset %}
-        <img class="ig-image ig-link"
+        <img class="image-item image-link"
              alt="{{ site.data.images[idx].description }}"
              src="{{ site.data.images[idx].src }}">
         {% endfor %}
