--- a/_sass/solo/_images.scss
+++ b/_sass/solo/_images.scss
@@ -1,103 +1,11 @@
 // ----------------------------------------------------------------------------
-// Images stylesheet
+// Base styles for image related HTML elements.
 // ----------------------------------------------------------------------------
 img {
   border-radius: 0.5em;
   margin: 0 auto;
   display: block;
   max-width: 100%;
-}
-
-.ig-image {
-  border-radius: 0.5em;
-  padding: .2em;
-}
-
-.ig-link {
-  &:is(:hover) {
-    opacity: 0.3;
-    filter: grayscale(100%);
-  }
-}
-
-.ig-row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.ig-column {
-  flex: 25%;
-  max-width: 25%;
-}
-
-.ig-resize {
-  flex: 100%;
-  max-width: 100%;
-}
-
-.ig-modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: $background-color-darker;
-}
-
-.ig-modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-
-#ig-modal-caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: $text-color;
-  padding: 10px 0;
-  height: 150px;
-}
-
-.ig-modal-content, #ig-modal-caption {
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
-}
-
-.ig-modal-close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: $accent-color;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.ig-modal-close:hover,
-.ig-modal-close:focus {
-  color: $text-color;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-@media only screen and (max-width: 700px){
-  .ig-modal-content {
-    width: 100%;
-  }
 }
 
 figure {
@@ -114,10 +22,110 @@ figure {
   }
 }
 
+// ----------------------------------------------------------------------------
+// Custom styles for image related HTML elements.
+// ----------------------------------------------------------------------------
+.image {
+  border: none;
+  border-radius: 0.5em;
+  padding: .2em;
+}
 
-.image-magic {
-  border: 1px solid black;
-  background-color: red;
-  width: 100%;
+.image-thumbnail {
+  width: 128px;
   transition: 1s;
+}
+
+.image-link {
+  &:is(:hover) {
+    opacity: 0.3;
+    filter: grayscale(100%);
+  }
+}
+
+// ----------------------------------------------------------------------------
+// Styles for an image grid (flexbox) elements.
+// ----------------------------------------------------------------------------
+.image-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.image-column {
+  flex: 25%;
+  max-width: 25%;
+}
+
+.image-item {
+  border: none;
+  border-radius: 0.5em;
+  padding: .2em;
+}
+
+// ----------------------------------------------------------------------------
+// Styles for an image modal (pop out).
+// ----------------------------------------------------------------------------
+.image-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: $background-color-darker;
+}
+
+.image-modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+#image-modal-caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: $text-color;
+  padding: 10px 0;
+  height: 150px;
+}
+
+.image-modal-content, #image-modal-caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+.image-modal-close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: $accent-color;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.image-modal-close:hover,
+.image-modal-close:focus {
+  color: $text-color;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+  .image-modal-content {
+    width: 100%;
+  }
 }
