--- a/_sass/solo/themes/_corbs.scss
+++ b/_sass/solo/themes/_corbs.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// dallas theme
+// corbs theme
 // ----------------------------------------------------------------------------
 $base-color: #030f4b !default;
 
