--- a/_includes/image/flexbox.html
+++ b/_includes/image/flexbox.html
@@ -7,7 +7,7 @@
         {% for j in (0..imagesPerColumn) %}
         {% assign offset = i | times: imagesPerColumn %}
         {% assign idx = i | plus: j | plus: offset %}
-        <img class="image-item image-link"
+        <img class="image-item"
              alt="{{ site.data.images[idx].description }}"
              src="{{ site.data.images[idx].src }}">
         {% endfor %}
