scss image work, rebrand to yolo

--- a/_includes/sampler.html
+++ b/_includes/sampler.html
@@ -1,6 +1,6 @@
 {% if site.sampler %}
-<h2 id="sampler">Solo Sampler</h2>
-<p>The Solo single page sampler platter, each color palette is bundled in `_sass/solo/themes`. Feel free to add your own.</p>
+<h2 id="sampler">Yolo Sampler</h2>
+<p>The Yolo single page sampler platter, each color palette is bundled in `_sass/yolo/themes`. Feel free to add your own.</p>
 <ul>
     <li>
         <a href="{{ site.baseurl }}/">default</a>:&nbsp;<em>The default style configured in _config.yml.</em>
