Image resize on click, maintain aspect ratio and recompute border radius when at max

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -44,19 +44,8 @@ images.forEach((image, index) => {
 const imageElements = document.querySelectorAll('.image');
 
 imageElements.forEach((imageElement, index) => {
-    let isImageBig = false;
-    let origWidth = imageElement.style.width;
-    let origHeight = imageElement.style.height;
     imageElement.addEventListener("click", () => {
-        if (isImageBig) {
-            imageElement.style.width = origWidth;
-            imageElement.style.height = origHeight;
-            isImageBig = false;
-        } else {
-            imageElement.style.width = "100%";
-            imageElement.style.height = "100%"
-            isImageBig = true;
-        }
+        imageElement.classList.toggle("max");
     });
 });
 
