--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,16 @@
-<div id="image-modal" class="image-modal">
-    <span class="image-modal-close">&times;</span>
-    <img class="image-modal-content" id="image-modal-content">
-    <div id="image-modal-caption"></div>
-</div>
+<head>
+    <!-- Site metadata -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Site title -->
+    <title>{{ site.title }}</title>
+
+    <!-- Site styling resources including fonts -->
+    {% include styles.html %}}
+
+    <!-- Shadow DOM for an image-modal -->
+    {% include image/modal.html %}
+</head>
