--- a/_sass/yolo/_syntax.scss
+++ b/_sass/yolo/_syntax.scss
@@ -3,7 +3,7 @@
 // ----------------------------------------------------------------------------
 
 pre, code {
-  font-family: inherit;
+  font-family: $monospace-font-family;
   color: $accent-color;
 }
 
@@ -43,7 +43,7 @@ figure.highlight {
   border-bottom-left-radius: 0.3em;
   background: $code-background-color;
   color: $base05;
-  font-family: inherit;
+  font-family: $monospace-font-family;
   line-height: 1.8;
 
   > pre,
