bug fix, remove extra bracket

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     <title>{{ site.title }}</title>
 
     <!-- Site styling resources including fonts -->
-    {% include styles.html %}}
+    {% include styles.html %}
 
     <!-- Shadow DOM for an image-modal -->
     {% include image/modal.html %}
