initial start on page header, tags, and pill styles

--- a/_sass/yolo/_variables.scss
+++ b/_sass/yolo/_variables.scss
@@ -22,4 +22,4 @@ $base0f: #C1291C !default;
 // ----------------------------------------------------------------------------
 $base-font-family: "Inconsolata", sans-serif !default;
 $secondary-font-family: "Montserrat", sans-serif !default;
-$monospace-font-family: "Source Code Pro", monospace !default;
+$monospace-font-family: "Inconsolata", monospace !default;
