--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,4 +5,13 @@
     </a>
     {% endif %}
     <h1><a href="./">{{ site.tag_text }}</a></h1>
+    <h4 class="subtitle">{{ site.description }}</h4>
+    <p>
+        <span>
+          {% for tag in page.tags %}
+            {% capture tag_name %}{{ tag }}{% endcapture %}
+            <a href="/tags/#{{ tag_name | slugify }}" class="pill"><nobr>{{ tag_name }}</nobr></a>
+          {% endfor %}
+        </span>
+    </p>
 </div>
