--- a/_sass/yolo/themes/_corbs.scss
+++ b/_sass/yolo/themes/_corbs.scss
@@ -13,3 +13,10 @@ $code-background-color: #060E3F !default;
 $text-color-alt: #c21d8a !default;
 $text-color: #ff31b9 !default;
 $header-text-color: #00e5ff !default;
+
+$pill-color: #342077 !default;
+$pill-hover-color: #ff31b9 !default;
+$pill-text-color: #00b0ff !default;
+$pill-text-hover-color: #030f4b !default;
+$pill-count-color: #ff31b9 !default;
+$pill-count-hover-color: #030f4b !default;
