--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -2,6 +2,7 @@
 // arcade theme
 // ----------------------------------------------------------------------------
 $base-color: #000928 !default;
+$secondary-color: #7254dc !default;
 
 $background-color: $base-color;
 $background-color-darker: #00080f !default;
