--- a/_sass/yolo/themes/_blue.scss
+++ b/_sass/yolo/themes/_blue.scss
@@ -2,6 +2,7 @@
 // blue theme
 // ----------------------------------------------------------------------------
 $base-color: #00135f !default;
+$secondary-color: #044ef4 !default;
 
 $background-color: $base-color;
 $background-color-darker: #002171 !default;
