--- a/_sass/yolo/themes/_dark.scss
+++ b/_sass/yolo/themes/_dark.scss
@@ -2,6 +2,7 @@
 // dark theme
 // ----------------------------------------------------------------------------
 $base-color: #000 !default;
+$secondary-color: #000000 !default;
 
 $background-color: $base-color;
 $background-color-darker: $base-color !default;
