--- a/_sass/yolo/themes/_default.scss
+++ b/_sass/yolo/themes/_default.scss
@@ -2,6 +2,7 @@
 // default theme
 // ----------------------------------------------------------------------------
 $base-color: #e3e2e2 !default;
+$secondary-color: #1a103b !default;
 
 $background-color: $base-color;
 $background-color-darker: #8e8e8e !default;
