--- a/_sass/yolo/themes/_dracula.scss
+++ b/_sass/yolo/themes/_dracula.scss
@@ -2,6 +2,7 @@
 // dracula theme
 // ----------------------------------------------------------------------------
 $base-color: #282a37 !default;
+$secondary-color: #452ca4 !default;
 
 $background-color: $base-color;
 $background-color-darker: #16181d !default;
