--- a/_sass/yolo/themes/_eightyfour.scss
+++ b/_sass/yolo/themes/_eightyfour.scss
@@ -2,6 +2,7 @@
 // eightyfour theme
 // ----------------------------------------------------------------------------
 $base-color: #272336 !default;
+$secondary-color: #0eb553 !default;
 
 $background-color: $base-color;
 $background-color-darker: #181623 !default;
