--- a/_sass/yolo/themes/_githubdark.scss
+++ b/_sass/yolo/themes/_githubdark.scss
@@ -2,6 +2,7 @@
 // githubdark theme
 // ----------------------------------------------------------------------------
 $base-color: #23292f !default;
+$secondary-color: #faa356 !default;
 
 $background-color: $base-color;
 $background-color-darker: #161b22 !default;
