--- a/_sass/yolo/themes/_green.scss
+++ b/_sass/yolo/themes/_green.scss
@@ -2,6 +2,7 @@
 // green theme
 // ----------------------------------------------------------------------------
 $base-color: #0c6319 !default;
+$secondary-color: #11b650 !default;
 
 $background-color: $base-color;
 $background-color-darker: #1b5e20 !default;
