--- a/_sass/yolo/themes/_light.scss
+++ b/_sass/yolo/themes/_light.scss
@@ -2,6 +2,7 @@
 // light theme
 // ----------------------------------------------------------------------------
 $base-color: #fff !default;
+$secondary-color: #6acfcb !default;
 
 $background-color: $base-color;
 $background-color-darker: #ccc !default;
