--- a/_sass/yolo/themes/_monokai.scss
+++ b/_sass/yolo/themes/_monokai.scss
@@ -2,6 +2,7 @@
 // monokai theme
 // ----------------------------------------------------------------------------
 $base-color: #2d292d !default;
+$secondary-color: #a57af2 !default;
 
 $background-color: $base-color;
 $background-color-darker: #151315 !default;
