--- a/_sass/yolo/themes/_nightowl.scss
+++ b/_sass/yolo/themes/_nightowl.scss
@@ -2,6 +2,7 @@
 // nightowl theme
 // ----------------------------------------------------------------------------
 $base-color: #001728 !default;
+$secondary-color: #88c04d !default;
 
 $background-color: $base-color;
 $background-color-darker: #00060a !default;
