--- a/_sass/yolo/themes/_purple.scss
+++ b/_sass/yolo/themes/_purple.scss
@@ -2,6 +2,7 @@
 // purple theme
 // ----------------------------------------------------------------------------
 $base-color: #190841 !default;
+$secondary-color: #4119a7 !default;
 
 $background-color: $base-color;
 $background-color-darker: #180440 !default;
