--- a/_sass/yolo/themes/_red.scss
+++ b/_sass/yolo/themes/_red.scss
@@ -2,6 +2,7 @@
 // red theme
 // ----------------------------------------------------------------------------
 $base-color: #6d1212 !default;
+$secondary-color: #c80b2d !default;
 
 $background-color: $base-color;
 $background-color-darker: #5c0505 !default;
