--- a/_sass/yolo/themes/_solarized.scss
+++ b/_sass/yolo/themes/_solarized.scss
@@ -2,6 +2,7 @@
 // solarizeddark theme
 // ----------------------------------------------------------------------------
 $base-color: #002c37 !default;
+$secondary-color: #0d89c8 !default;
 
 $background-color: $base-color;
 $background-color-darker: #001b1f !default;
