--- a/_sass/yolo/themes/_soft.scss
+++ b/_sass/yolo/themes/_soft.scss
@@ -2,6 +2,7 @@
 // soft theme
 // ----------------------------------------------------------------------------
 $base-color: #fafafa !default;
+$secondary-color: #59b4eb !default;
 
 $background-color: $base-color;
 $background-color-darker: #e0e0e0 !default;
